@@ -18,17 +18,20 @@ public class CommonMenu extends Menu {
     @Override
     public Menu generateButtons() {
         this.setTextToPrint("Seleziona la funzionalità");
-        try{
-            Map<String, String> func = (Map<String, String>) super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find(new Document("name", "commonMenu")).first().get("functionalities");
-            Set<String> keys = func.keySet();
-            Collection<String> values = func.values();
-            ArrayList<Iterator<String>> iterators = new ArrayList<>(Arrays.asList(keys.iterator(), values.iterator()));
-            while (iterators.get(0).hasNext())
-                this.getAllButtons().add(new ArrayList<>(List.of(new Button(iterators.get(1).next(), "name="+iterators.get(0).next()+",subj="+this.subject))));
+        try {
+            Document document = super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find(new Document("name", "commonMenu")).first();
+            if (document != null) {
+                Map<String, String>func = (Map<String, String>) document.get("functionalities");
+                Set<String> keys = func.keySet();
+                Collection<String> values = func.values();
+                ArrayList<Iterator<String>> iterators = new ArrayList<>(Arrays.asList(keys.iterator(), values.iterator()));
+                while (iterators.get(0).hasNext())
+                    this.getAllButtons().add(new ArrayList<>(List.of(new Button(iterators.get(1).next(), "name=" + iterators.get(0).next() + ",subj=" + this.subject))));
+            }
             this.getAllButtons().add(new ArrayList<>(List.of(new Button("⬆️️️ Torna all'inizio", "/restart"))));
-        } catch (Exception e){
-            e.printStackTrace();
-        }
+            } catch(Exception e){
+                e.printStackTrace();
+            }
         return this;
     }
 
