@@ -16,11 +16,17 @@ public class FAQMenu extends CommonMenu {
     public Menu generateButtons() {
         this.setTextToPrint("Seleziona una domanda");
         try{
-            Map<String, Object> faq = (Map<String, Object>) super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find((new Document("name", "faq")).append("subj", Byte.parseByte(this.getSubject()))).first().get("questions");
-            for (Object current: faq.values()) {
-                Iterator<Object> currentIterators = ((Document) current).values().iterator();
-                while (currentIterators.hasNext())
-                    this.getAllButtons().add(new ArrayList<>(List.of(new Button(currentIterators.next().toString(), "ans="+currentIterators.next().toString()))));
+            Map<String, Object> faq = super.getClient().getMongo().getDatabase("gallettabot").getCollection("menus").find((new Document("name", "faq")).append("subj", Byte.parseByte(this.getSubject()))).first();
+            if (faq != null) {
+                faq = (Map<String, Object>) faq.get("questions");
+                for (Object current : faq.values()) {
+                    Iterator<Object> currentIterators = ((Document) current).values().iterator();
+                    while (currentIterators.hasNext()) {
+                        ArrayList<String> text = new ArrayList<>(Arrays.asList(currentIterators.next().toString()));
+                        text.add("\n\nRisposta:\n" + currentIterators.next().toString());
+                        this.getAllButtons().add(new ArrayList<>(List.of(new Button(text.get(0), "quest=Domanda:\n" + text.get(0) + text.get(1)))));
+                    }
+                }
             }
             this.getAllButtons().add(new ArrayList<>(List.of(new Button("⬆️ Torna all'inizio", "/restart"))));
         } catch (Exception e){
